_course_files/4 Dark Releases/5b-istio-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - fleetman-staff-service
  http:
    - match:
      - headers: #IF
          x-my-header:
            exact: ""
      route: # THEN
      - destination:
          host: fleetman-staff-service
          subset: experimental
    - route: #CATCH ALL OTHERS
      - destination:
          host: fleetman-staff-service
          subset: original
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service
  namespace: default
spec:
  host: fleetman-staff-service
  subsets:
    - labels:
        version: safe
      name: original
    - labels:
        version: risky
      name: experimental
